--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/OrbitView/OrbitViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/OrbitView/OrbitViewPage.xaml
@@ -1,32 +1,34 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OrbitViewPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OrbitViewPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" x:Name="Root">
+    <Grid x:Name="Root"
+          Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
             <Pivot>
                 <PivotItem Header="People">
-                    <controls:OrbitView x:Name="people" 
-                                        OrbitsEnabled="{Binding DataContext.OrbitsEnabled.Value, ElementName=Root, Mode=OneWay}" 
-                                        AnchorsEnabled="{Binding DataContext.AnchorsEnabled.Value, ElementName=Root, Mode=OneWay}"
-                                        IsItemClickEnabled="{Binding DataContext.IsItemClickEnabled.Value, ElementName=Root, Mode=OneWay}" 
-                                        MinItemSize="{Binding DataContext.MinItemSize.Value, ElementName=Root, Mode=OneWay}" 
-                                        MaxItemSize="{Binding DataContext.MaxItemSize.Value, ElementName=Root, Mode=OneWay}"
+                    <controls:OrbitView x:Name="people"
                                         AnchorColor="{Binding DataContext.AnchorColor.Value, ElementName=Root, Mode=OneWay}"
+                                        AnchorsEnabled="{Binding DataContext.AnchorsEnabled.Value, ElementName=Root, Mode=OneWay}"
+                                        IsItemClickEnabled="{Binding DataContext.IsItemClickEnabled.Value, ElementName=Root, Mode=OneWay}"
+                                        MaxItemSize="{Binding DataContext.MaxItemSize.Value, ElementName=Root, Mode=OneWay}"
+                                        MinItemSize="{Binding DataContext.MinItemSize.Value, ElementName=Root, Mode=OneWay}"
                                         OrbitColor="{Binding DataContext.OrbitColor.Value, ElementName=Root, Mode=OneWay}"
-                                        >
+                                        OrbitsEnabled="{Binding DataContext.OrbitsEnabled.Value, ElementName=Root, Mode=OneWay}">
                         <controls:OrbitView.ItemTemplate>
                             <DataTemplate x:DataType="controls:OrbitViewItem">
-                                <controls:DropShadowPanel Color="Black" BlurRadius="20" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch">
-                                    <Ellipse >
+                                <controls:DropShadowPanel HorizontalContentAlignment="Stretch"
+                                                          VerticalContentAlignment="Stretch"
+                                                          BlurRadius="20"
+                                                          Color="Black">
+                                    <Ellipse>
                                         <Ellipse.Fill>
-                                            <ImageBrush ImageSource="{x:Bind Image}"></ImageBrush>
+                                            <ImageBrush ImageSource="{x:Bind Image}" />
                                         </Ellipse.Fill>
                                     </Ellipse>
                                 </controls:DropShadowPanel>
@@ -34,20 +36,39 @@
                         </controls:OrbitView.ItemTemplate>
                         <controls:OrbitView.ItemsSource>
                             <controls:OrbitViewItemCollection>
-                                <controls:OrbitViewItem Image="ms-appx:///Assets/People/shen.png" Distance="0.1" Label="Shen" Diameter="0.2"></controls:OrbitViewItem>
-                                <controls:OrbitViewItem Image="ms-appx:///Assets/People/david.png" Distance="0.2" Label="David" Diameter="0.5"></controls:OrbitViewItem>
-                                <controls:OrbitViewItem Image="ms-appx:///Assets/People/petri.png" Distance="0.4" Label="Petri" Diameter="0.6"></controls:OrbitViewItem>
-                                <controls:OrbitViewItem Image="ms-appx:///Assets/People/vlad.png" Distance="0.8" Label="Vlad" Diameter="0.8"></controls:OrbitViewItem>
+                                <controls:OrbitViewItem Diameter="0.2"
+                                                        Distance="0.1"
+                                                        Image="ms-appx:///Assets/People/shen.png"
+                                                        Label="Shen" />
+                                <controls:OrbitViewItem Diameter="0.5"
+                                                        Distance="0.2"
+                                                        Image="ms-appx:///Assets/People/david.png"
+                                                        Label="David" />
+                                <controls:OrbitViewItem Diameter="0.6"
+                                                        Distance="0.4"
+                                                        Image="ms-appx:///Assets/People/petri.png"
+                                                        Label="Petri" />
+                                <controls:OrbitViewItem Diameter="0.8"
+                                                        Distance="0.8"
+                                                        Image="ms-appx:///Assets/People/vlad.png"
+                                                        Label="Vlad" />
                             </controls:OrbitViewItemCollection>
                         </controls:OrbitView.ItemsSource>
                         <controls:OrbitView.CenterContent>
                             <Grid>
                                 <controls:DropShadowPanel>
-                                    <Ellipse Fill="White" Height="105" Width="105" Stroke="Black" StrokeThickness="2"></Ellipse>
+                                    <Ellipse Width="105"
+                                             Height="105"
+                                             Fill="White"
+                                             Stroke="Black"
+                                             StrokeThickness="2" />
                                 </controls:DropShadowPanel>
-                                <Ellipse Height="100" Width="100" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <Ellipse Width="100"
+                                         Height="100"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Center">
                                     <Ellipse.Fill>
-                                        <ImageBrush ImageSource="ms-appx:///Assets/People/nikola.png"></ImageBrush>
+                                        <ImageBrush ImageSource="ms-appx:///Assets/People/nikola.png" />
                                     </Ellipse.Fill>
                                 </Ellipse>
                             </Grid>
@@ -56,13 +77,27 @@
                 </PivotItem>
                 <PivotItem Header="Devices">
                     <Grid>
-                        <controls:OrbitView x:Name="devices" AnchorsEnabled="True" IsItemClickEnabled="True" ItemInvoked="itemInvoked" ItemsSource="{x:Bind Devices}" MinItemSize="10" MaxItemSize="100">
+                        <controls:OrbitView x:Name="devices"
+                                            AnchorsEnabled="True"
+                                            IsItemClickEnabled="True"
+                                            ItemInvoked="ItemInvoked"
+                                            ItemsSource="{x:Bind _devices}"
+                                            MaxItemSize="100"
+                                            MinItemSize="10">
                             <controls:OrbitView.ItemTemplate>
                                 <DataTemplate x:DataType="local:DeviceItem">
-                                    <Grid Height="60" Width="60" Background="White">
+                                    <Grid Width="60"
+                                          Height="60"
+                                          Background="White">
                                         <StackPanel>
-                                            <SymbolIcon Symbol="{x:Bind Symbol}" HorizontalAlignment="Center" Foreground="Gray" Height="30"></SymbolIcon>
-                                            <TextBlock Foreground="Gray" FontSize="10" TextAlignment="Center" Text="{x:Bind Label}"></TextBlock>
+                                            <SymbolIcon Height="30"
+                                                        HorizontalAlignment="Center"
+                                                        Foreground="Gray"
+                                                        Symbol="{x:Bind Symbol}" />
+                                            <TextBlock FontSize="10"
+                                                       Foreground="Gray"
+                                                       Text="{x:Bind Label}"
+                                                       TextAlignment="Center" />
                                         </StackPanel>
                                     </Grid>
                                 </DataTemplate>
@@ -70,18 +105,29 @@
                             <controls:OrbitView.CenterContent>
                                 <Grid>
                                     <controls:DropShadowPanel>
-                                        <Ellipse Fill="White" Height="105" Width="105" Stroke="Black" StrokeThickness="2"></Ellipse>
+                                        <Ellipse Width="105"
+                                                 Height="105"
+                                                 Fill="White"
+                                                 Stroke="Black"
+                                                 StrokeThickness="2" />
                                     </controls:DropShadowPanel>
-                                    <Ellipse Height="100" Width="100" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                    <Ellipse Width="100"
+                                             Height="100"
+                                             HorizontalAlignment="Center"
+                                             VerticalAlignment="Center">
                                         <Ellipse.Fill>
-                                            <ImageBrush ImageSource="ms-appx:///Assets/People/nikola.png"></ImageBrush>
+                                            <ImageBrush ImageSource="ms-appx:///Assets/People/nikola.png" />
                                         </Ellipse.Fill>
                                     </Ellipse>
                                 </Grid>
                             </controls:OrbitView.CenterContent>
                         </controls:OrbitView>
 
-                        <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="AddDeviceClick">Add Device</Button>
+                        <Button HorizontalAlignment="Center"
+                                VerticalAlignment="Bottom"
+                                Click="AddDeviceClick">
+                            Add Device
+                        </Button>
                     </Grid>
                 </PivotItem>
             </Pivot>
