Adding short cut to FlyoutMenuItems

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:commands="using:Microsoft.Toolkit.Uwp.SampleApp.Menu.Commands"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
@@ -12,6 +13,7 @@
             <commands:NewProjectCommand x:Key="NewProject" />
             <commands:NewFileCommand x:Key="NewFile" />
             <commands:GenericCommand x:Key="GenericCommand" />
+            <converters:StringFormatConverter x:Key="StringFormatConverter" />
         </ResourceDictionary>
     </Page.Resources>
 
@@ -28,10 +30,10 @@
                 <MenuFlyoutSubItem Text="New">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+N"
                                     Command="{StaticResource NewProject}"
-                                    Text="Project" />
+                                    Text="{Binding Path=(controls:Menu.InputGestureText), RelativeSource={RelativeSource Self}, Converter={StaticResource StringFormatConverter}, ConverterParameter='Project        ({0})'}" />
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+N"
                                     Command="{StaticResource NewFile}"
-                                    Text="File" />
+                                    Text="{Binding Path=(controls:Menu.InputGestureText), RelativeSource={RelativeSource Self}, Converter={StaticResource StringFormatConverter}, ConverterParameter='File                       ({0})'}" />
                 </MenuFlyoutSubItem>
                 <MenuFlyoutSubItem Text="Open">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+O"
@@ -41,7 +43,7 @@
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+O"
                                     Command="{StaticResource GenericCommand}"
                                     CommandParameter="Select File"
-                                    Text="File" />
+                                    Text="{Binding Path=(controls:Menu.InputGestureText), RelativeSource={RelativeSource Self}, Converter={StaticResource StringFormatConverter}, ConverterParameter='File        ({0})'}" />
                 </MenuFlyoutSubItem>
                 <MenuFlyoutSeparator />
                 <MenuFlyoutItem Text="Page Setup" />
