--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextBoxMaskPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+      xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
@@ -36,7 +36,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel>
                     <TextBox Name="AlphaTextBox"
-                             controls:TextBoxMask.Mask="9a9a--a9a*"
+                             extensions:TextBoxMask.Mask="9a9a--a9a*"
                              Header="Text box with Mask 9a9a--a9a* (9 allows from 0 to 9, a allow from a to Z and * allows both a and 9) with initial value"
                              HeaderTemplate="{StaticResource HeaderTemplate}"
                              Style="{StaticResource MaskedTextBoxStyle}"
@@ -55,15 +55,15 @@
                 </StackPanel>
 
                 <TextBox Grid.Row="1"
-                         controls:TextBoxMask.Mask="+1999-9999"
-                         controls:TextBoxMask.PlaceHolder=" "
+                         extensions:TextBoxMask.Mask="+1999-9999"
+                         extensions:TextBoxMask.PlaceHolder=" "
                          Header="Text box with Mask +1999-9999 and placeHolder as space (placeholder represents the characters the user can change on runtime)"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource MaskedTextBoxStyle}" />
 
                 <TextBox Grid.Row="2"
-                         controls:TextBoxMask.CustomMask="5:[1-5],c:[a-c]"
-                         controls:TextBoxMask.Mask="a5c-5c*9"
+                         extensions:TextBoxMask.CustomMask="5:[1-5],c:[a-c]"
+                         extensions:TextBoxMask.Mask="a5c-5c*9"
                          Header="Text box with CustomMask in case you want to define your own variable character like a,9 and * , mask: a5c-5c*9, 5: [1-5], c: [a-c]"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource MaskedTextBoxStyle}" />
